@@ -26,7 +26,7 @@
 ### END INIT INFO
 
 # Assure that the kernel has module support.
-[ -e /proc/ksyms -o -e /proc/modules ] || exit 0
+[ -e /proc/modules ] || exit 0
 
 . /lib/lsb/init-functions
 
