@@ -42,7 +42,7 @@
       <para>There are instructions to build this package in the BLFS book if you
       need to build the RPC server or additional language bindings. The
       additional language bindings will require additional packages to be
-      installed. See <ulink url="&blfs-root;view/svn/server/databases.html#db"/>
+      installed. See <ulink url="&blfs-root;view/&short-version;/server/databases.html#db"/>
       for suggested installation instructions.</para>
 
       <para>Also, GDBM <emphasis>could</emphasis> be used in place of Berkeley
@@ -52,7 +52,7 @@
       installed, not with GDBM. If you fully understand the risks versus
       benefits of using GDBM and wish to use it anyway, see the BLFS
       instructions located at <ulink
-      url="&blfs-root;view/svn/general/gdbm.html"/></para>
+      url="&blfs-root;view/&short-version;/general/gdbm.html"/></para>
 
     </tip>
 
