@@ -78,7 +78,7 @@ cd ../gcc-build</userinput></screen>
 
     <para>Note that for other languages, there are some prerequisites that
     are not yet available. See the
-    <ulink url="&blfs-root;view/svn/general/gcc.html">BLFS Book</ulink>
+    <ulink url="&blfs-root;view/&short-version;/general/gcc.html">BLFS Book</ulink>
     for instructions on how to build all of GCC's supported languages.</para>
 
     <variablelist>
