@@ -46,7 +46,7 @@
     common requirement on a base Linux system, remove the dependency on Berkeley
     DB by applying the commands below.  If the <command>arpd</command> binary is
     needed, instructions for compiling Berkeley DB can be found in the BLFS Book
-    at <ulink url="&blfs-root;view/svn/server/databases.html#db"/>.
+    at <ulink url="&blfs-root;view/&short-version;/server/databases.html#db"/>.
     </para>
 
 <screen><userinput remap="pre">sed -i '/^TARGETS/s@arpd@@g' misc/Makefile
