@@ -43,7 +43,7 @@
 
     <note>
       <para>If you would like to enforce the use of strong passwords, refer to
-      <ulink url="&blfs-root;view/svn/postlfs/cracklib.html"/> for installing
+      <ulink url="&blfs-root;view/&short-version;/postlfs/cracklib.html"/> for installing
       CrackLib prior to building Shadow. Then add
       <parameter>--with-libcrack</parameter> to the <command>configure</command>
       command below.</para>
