@@ -34,7 +34,7 @@
 
       <para>If you prefer another editor&mdash;such as Emacs, Joe, or
       Nano&mdash;please refer to <ulink
-      url="&blfs-root;view/svn/postlfs/editors.html"/> for suggested
+      url="&blfs-root;view/&short-version;/postlfs/editors.html"/> for suggested
       installation instructions.</para>
     </tip>
 
@@ -119,7 +119,7 @@ done</userinput></screen>
     additional libraries to be installed. For more information on this
     process, refer to the Vim documentation and the Vim installation page
     in the BLFS book at <ulink
-    url="&blfs-root;view/svn/postlfs/vim.html"/>.</para>
+    url="&blfs-root;view/&short-version;/postlfs/vim.html"/>.</para>
 
   </sect2>
 
