@@ -157,6 +157,6 @@ EOF</userinput></screen>
 
   <para>UTF-8 based locales are not supported well by some programs.
   Work is in progress to document and, if possible, fix such problems, see
-  <ulink url="&blfs-root;view/svn/introduction/locale-issues.html"/>.</para>
+  <ulink url="&blfs-root;view/&short-version;/introduction/locale-issues.html"/>.</para>
 
 </sect1>
