@@ -61,7 +61,7 @@
     url="&hints-root;kernel-configuration.txt"/>.  BLFS has some information
     regarding particular kernel configuration requirements of packages outside
     of LFS at <ulink
-    url="&blfs-root;view/svn/longindex.html#kernel-config-index"/>.  Additional
+    url="&blfs-root;view/&short-version;/longindex.html#kernel-config-index"/>.  Additional
     information about configuring and building the kernel can be found at
     <ulink url="http://www.kroah.com/lkn/"/> </para>
 
