@@ -1,6 +1,6 @@
-<!ENTITY version         "SVN-20140801">
+<!ENTITY version         "SVN-20140802">
 <!ENTITY short-version   "svn">  <!-- Used in dbus chapter, change to x.y for release -->
-<!ENTITY releasedate     "August 01, 2014">
+<!ENTITY releasedate     "August 02, 2014">
 <!ENTITY copyrightdate   "1999-2014"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone       "7.6">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
